Add logo and link to Twitter

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,17 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>About | Brad Cerasani, Designer & Developer</title>
+    <title>Brad Cerasani: Designer & Developer</title>
 
     <link rel="stylesheet" href="/styles/main.css"/>
   </head>
-  <body>
+  <body class="u-flex u-alignCenter u-justifyCenter u-flexColumn">
+    <h1 class="Logo u-mb2">
+      <span class="u-visuallyHidden">Brad Cerasani: Designer & Developer</span>
+    </h1>
 
+    <a href="https://twitter.com/bradcerasani">
+      <img src="https://media.giphy.com/media/MMIKQNEsdmKSk/giphy.gif" alt="Bill Murray">
+    </a>
   </body>
 </html>
