--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,17 @@
     <title>Brad Cerasani: Designer & Developer</title>
 
     <link rel="stylesheet" href="/styles/main.css"/>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-5977667-28', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body class="u-flex u-alignCenter u-justifyCenter u-flexColumn">
     <h1 class="Logo u-mb2">
