--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Brad Cerasani: Designer & Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Brad Cerasani: Designer & Developer</title>
